Refactor getting the authenticated user
