# app/Http/Controllers/Controller.php
@@ -23,6 +23,7 @@ use OpenApi\Attributes as OAT;
     ),
     OAT\Tag(name: 'auth', description: 'User authentication'),
     OAT\Tag(name: 'adminAuth', description: 'Admin authentication'),
+    OAT\Tag(name: 'profile', description: 'User profile'),
     OAT\Schema(
         schema: 'ValidationError',
         properties: [
