# routes/api/profile.php
@@ -1,8 +1,8 @@
 <?php
 
-use App\Http\Controllers\V1\UserController;
+use App\Http\Controllers\ProfileController;
 use Illuminate\Support\Facades\Route;
 
 Route::group(['prefix' => 'profile'], function () {
-    Route::get('/', [UserController::class, 'me']);
+    Route::get('/', [ProfileController::class, 'me']);
 });
